update bug managment
